--- a/recruit-gui/src/styles.css
+++ b/recruit-gui/src/styles.css
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'https://fonts.googleapis.com/icon?family=Material+Icons';
+@import 'material-symbols';
 
 .bg-arenella-primary {
 	background: #181414;
