--- a/recruit-gui/src/app/suggestions/suggestions.component.two.css
+++ b/recruit-gui/src/app/suggestions/suggestions.component.two.css
@@ -181,11 +181,45 @@ textarea {
 	display:inline;
 }
 
+.geo-zone-filters{
+	padding:5px;
+	margin-top:5px;
+}
+
+.geo-code-filter{
+	float:left;
+	border-radius: 0.25rem;
+	margin:5px;
+	background:#6a5acd;
+	color:white;
+	padding:5px;
+	width:300px;	
+	cursor:pointer;
+	text-align:center;
+}
+
+.geo-code-selected-true{
+	opacity:1;
+}
+
+.geo-code-selected-false{
+	opacity:0.25;
+}
+
+.toggle-filter-option{
+	margin-top:15px;
+	cursor:pointer;
+	color:#6a5acd;	
+}
+
 @media (max-width:700px)  {
 	.suggestion-result-icons{
 		margin-top:5px;
 		margin-left:0px;
 	}	
+	.geo-code-filter{
+		width:100%;	
+	}
 }
 
 .suggestion-result-footer{
