untested but finished flags in suggestion profile and supported country slist. Also fix for fetching suggestions race condition issue resolved

--- a/recruit-gui/src/app/new-candidate/new-candidate.component.html
+++ b/recruit-gui/src/app/new-candidate/new-candidate.component.html
@@ -67,7 +67,7 @@
 							<td>
 								<select formControlName="country" class="new-candidate-country-list">
 									<option></option>
-									<option *ngFor="let country of countries" value="{{country.countryName}}">{{country.countryName | translate}}</option>
+									<option *ngFor="let country of countries" value="{{country.name}}">{{country.name | translate}}</option>
 									
 								</select>
 							</td>	
