--- a/recruit-gui/src/app/new-candidate/new-candidate.component.html
+++ b/recruit-gui/src/app/new-candidate/new-candidate.component.html
@@ -92,12 +92,12 @@
 						<tr class="{{permRoleClass}}">
 							<td class="hdr-label">{{'arenella-new-candidate-rate' | translate}}</td>
 							<td>
-								<select formControlName="permCurrency">
+								<select formControlName="permCurrency"  class='select-mini'>
 									<option>{{'arenella-new-candidate-eur' | translate}}</option>
 									<option>{{'arenella-new-candidate-gbp' | translate}}</option>
 								</select>
 							
-								<select formControlName="permTimeUnit">
+								<select formControlName="permTimeUnit"  class='select-mini'>
 									<option value="HOUR">{{'arenella-new-candidate-hour' | translate}}</option>
 									<option value="DAY">{{'arenella-new-candidate-day' | translate}}</option>
 									<option	value="YEAR">{{'arenella-new-candidate-year' | translate}}</option>
@@ -118,11 +118,11 @@
 						<tr class="{{contractRoleClass}}">
 							<td class="hdr-label">{{'arenella-new-candidate-rate' | translate}}</td>
 							<td>
-								<select formControlName="contractCurrency">
+								<select formControlName="contractCurrency" class='select-mini'>
 									<option>{{'arenella-new-candidate-eur' | translate}}</option>
 									<option>{{'arenella-new-candidate-gbp' | translate}}</option>
 								</select>
-								<select formControlName="contractTimeUnit">
+								<select formControlName="contractTimeUnit" class='select-mini'>
 									<option value="HOUR">{{'arenella-new-candidate-hour' | translate}}</option>
 									<option value="DAY">{{'arenella-new-candidate-day' | translate}}</option>
 									<option	value="YEAR">{{'arenella-new-candidate-year' | translate}}</option>
@@ -148,6 +148,23 @@
 							<td class="hdr-label">{{'arenella-new-candidate-available-from' | translate}}</td>
 							<td>
 							<input  formControlName="availableFromDate" type="date"/>
+							</td>	
+						</tr>
+						<tr>
+							<td class="hdr-label">{{'arenella-new-candidate-requires-sponsorship' | translate}}</td>
+							<td>
+							<input  formControlName="requiresSponsorship" type="checkbox"/>
+							</td>	
+						</tr>
+						<tr>
+							<td class="hdr-label">{{'arenella-new-candidate-security-clearance' | translate}}</td>
+							<td>
+							<select  formControlName="securityClearance">
+									<option value="NONE">{{'arenella-new-candidate-sc-none' | translate}}</option>
+									<option value="SC">{{'arenella-new-candidate-sc-sc' | translate}}</option>
+									<option value="DV">{{'arenella-new-candidate-sc-dv' | translate}}</option>
+									<option value="NATO">{{'arenella-new-candidate-sc-nato' | translate}}</option>
+								</select>
 							</td>	
 						</tr>
 						<tr>
