--- a/recruit-gui/src/app/recruiter-marketplace/recruiter-marketplace.component.html
+++ b/recruit-gui/src/app/recruiter-marketplace/recruiter-marketplace.component.html
@@ -39,12 +39,7 @@
 					<tbody>
 						<tr *ngFor="let candidate of offeredCandidates" class="as-link" (click)="viewCandidate(candidate)">
 							<td class="table-bdy-td" align="center">
-								<span title="{{candidate.country}}" *ngIf="candidate.country === 'NETHERLANDS'"  		class="flag-icon flag-icon-nl"></span>
-								<span title="{{candidate.country}}" *ngIf="candidate.country === 'BELGIUM'"				class="flag-icon flag-icon-be"></span>
-								<span title="{{candidate.country}}" *ngIf="candidate.country === 'UK'"					class="flag-icon flag-icon-gb"></span>
-								<span title="{{candidate.country}}" *ngIf="candidate.country === 'REPUBLIC_OF_IRELAND'"	class="flag-icon flag-icon-ie"></span>
-								<span title="{{candidate.country}}" *ngIf="candidate.country === 'EU_REMOTE'"			class="flag-icon flag-icon-eu"></span>
-								<span title="{{candidate.country}}" *ngIf="candidate.country === 'WORLD_REMOTE'"		class="flag-icon flag-icon-xx"></span>
+								<span class="flag-icon flag-icon-{{getIso2Code(candidate)}} country-flag"></span>
 							</td>
 							<td>{{candidate.firstname}}</td>
 							<td>{{candidate.surname}}</td>
