--- a/recruit-gui/src/app/create-candidate/create-candidate.component.html
+++ b/recruit-gui/src/app/create-candidate/create-candidate.component.html
@@ -58,8 +58,8 @@
 										<td class="hdr-label">{{'arenella-create-candidate-contract-rate' | translate}}</td>
 										<td>
 											<select formControlName="contractCurrency">
-												<option>{{'arenella-create-candidate-eur' | translate}}</option>
-												<option>{{'arenella-create-candidate-gbp' | translate}}</option>
+												<option value="EUR">{{'arenella-create-candidate-eur' | translate}}</option>
+												<option value="GBP">{{'arenella-create-candidate-gbp' | translate}}</option>
 											</select>
 											<select formControlName="contractTimeUnit">
 												<option value="HOUR">{{'arenella-create-candidate-hour' | translate}}</option>
@@ -74,8 +74,8 @@
 										<td class="hdr-label">{{'arenella-create-candidate-perm-rate' | translate}}</td>
 										<td>
 											<select formControlName="permCurrency">
-												<option>{{'arenella-create-candidate-eur' | translate}}</option>
-												<option>{{'arenella-create-candidate-gbp' | translate}}</option>
+												<option value="EUR">{{'arenella-create-candidate-eur' | translate}}</option>
+												<option value="GBP">{{'arenella-create-candidate-gbp' | translate}}</option>
 											</select>
 										
 											<select formControlName="permTimeUnit">
