--- a/recruit-gui/src/app/suggestions/saved-candidates/saved-candidates.component.html
+++ b/recruit-gui/src/app/suggestions/saved-candidates/saved-candidates.component.html
@@ -4,22 +4,35 @@
 	</div>	 
 	<br>
 	<div style="margin-top:0px;">
-		<div class="suggestion-icon" *ngFor="let savedCandidate of savedCandidates" (click)="showSuggestedCandidateOverviewSavedCandidate(savedCandidate)">
-			<div class="saved-candidate-icon-header" *ngIf="!isNoLongerAvailableSC(savedCandidate)">
-				C{{savedCandidate.candidate.candidateId}}
-			</div>
-			<div class="saved-candidate-icon-header-disabled" *ngIf="isNoLongerAvailableSC(savedCandidate)">
-				C{{savedCandidate.candidate.candidateId}}
-			</div>
-			<div class="suggestion-icon-body">
-				<div *ngIf="!isNoLongerAvailableSC(savedCandidate)">
-					{{savedCandidate.candidate.firstname}} {{savedCandidate.candidate.surname}}
+		<div class="suggestion-icon" *ngFor="let savedCandidate of savedCandidates" >
+			<!--  Standard -->
+			<div *ngIf="!isNoLongerAvailableSC(savedCandidate)" (click)="showSuggestedCandidateOverviewSavedCandidate(savedCandidate)">
+				<div class="saved-candidate-icon-header">
+					C{{savedCandidate.candidate.candidateId}}
 				</div>
-				<div *ngIf="isNoLongerAvailableSC(savedCandidate)">
-					{{'saved-candidate-no-longer-available' |translate}}
+				<div class="suggestion-icon-body">
+					<div>
+						{{'saved-candidate-no-longer-available' |translate}}
+					</div>
+					<div>
+						{{savedCandidate.candidate.roleSought}}
+					</div>
 				</div>
-				<div>
-					{{savedCandidate.candidate.roleSought}}
+			</div>
+			<!--  Unavailable -->
+			<div style="cursor:default">
+				<div *ngIf="isNoLongerAvailableSC(savedCandidate)" style="cursor:default">
+					<div class="saved-candidate-icon-header-disabled">
+						C{{savedCandidate.candidate.candidateId}}
+					</div>
+					<div class="suggestion-icon-body-disabled">
+						<div>
+							{{savedCandidate.candidate.firstname}} {{savedCandidate.candidate.surname}}
+						</div>
+						<div>
+							{{savedCandidate.candidate.roleSought}}
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
