--- a/recruit-gui/src/app/suggestions/suggestions.component.two.css
+++ b/recruit-gui/src/app/suggestions/suggestions.component.two.css
@@ -207,7 +207,7 @@ textarea {
 }
 
 .toggle-filter-option{
-	margin-top:15px;
+	margin:0px;
 	cursor:pointer;
 	color:#6a5acd;	
 }
@@ -227,6 +227,10 @@ textarea {
 	width:300px;
 }
 
+.country-selections{
+	width:55%;
+}
+
 @media (max-width:700px)  {
 
 	 .suggestion-icon{
@@ -234,7 +238,11 @@ textarea {
 		margin-right:2%;
 		margin-bottom:2%;
 	 }
-	 
+
+	 .country-selections{
+		width:100%;
+	 }
+	 	 
 	 .sugg-srch-job-title{
 		min-width:0px;
 	}
