--- a/recruit-gui/src/app/suggestions/suggestions.component.html
+++ b/recruit-gui/src/app/suggestions/suggestions.component.html
@@ -259,9 +259,11 @@
 	</div>
 	<div class="modal-body">
 		<p>{{'arenella-suggestions-paid-subscription-text-1' | translate}}</p>
-		<p *ngIf="paidFeature == 'paidFeatureUnavailableCandidates'">{{'arenella-suggestions-paid-subscription-text-3' | translate}} : {{candidateTotals.unavailable}}</p>
+		<p *ngIf="paidFeature == 'paidFeatureUnavailableCandidates'">{{'arenella-suggestions-paid-subscription-text-3' | translate}}</p>
+		<p *ngIf="paidFeature == 'paidFeatureUnavailableCandidates'">{{'arenella-suggestions-paid-subscription-text-4' | translate}} : {{candidateTotals.unavailable}}</p>
 		<p *ngIf="paidFeature == 'paidFeatureGeoZones'">{{'arenella-suggestions-paid-subscription-text-2-geozone' | translate}}</p>
 		<p>{{'arenella-suggestions-paid-subscription-text-2' | translate}}</p>
 		<button class="btn btn-secondary" (click)="choseSubscription()" download>{{'arenella-suggestions-paid-subscription-choose-subscription-btn' | translate}}</button>
 	</div> 
 </dialog>
+
