--- a/recruit-gui/src/app/accounts/accounts.component.html
+++ b/recruit-gui/src/app/accounts/accounts.component.html
@@ -122,6 +122,23 @@
 		
 		<!--  -->
 		<div *ngIf="showAvailabilityCheckTab">
+		
+			<div style="margin-top:10px; margin-bottom:10px;">
+				<table>
+					<tbody>
+						<tr>
+							<td class="recruiter-active-subscription">{{'arenella-accounts-tabavailability-available' | translate}}</td>
+							<td class="recruiter-active-subscription" style="padding-right:10px">{{availableCount}}</td>
+							<td><button class="btn btn-secondary"  (click)="toggleShowAvailable()">{{'arenella-accounts-tabrecruiters-toggle' | translate}}</button></td>
+						</tr>
+						<tr>
+							<td class="recruiter-credit-based-subscription">{{'arenella-accounts-tabavailability-available' | translate}}</td>
+							<td class="recruiter-credit-based-subscription" style="padding-right:30px">{{unavailableCount}}</td>
+							<td><button class="btn btn-secondary" (click)="toggleShowUnavailable()">{{'arenella-accounts-tabrecruiters-toggle' | translate}}</button></td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
 			<table class="table candidate-table availability">
 				<thead>
 		      		<tr>
