bug fix EU and world for marketplace

--- a/recruit-gui/src/app/recruiter-marketplace/recruiter-marketplace.component.html
+++ b/recruit-gui/src/app/recruiter-marketplace/recruiter-marketplace.component.html
@@ -86,7 +86,7 @@
 								<span title="{{openPosition.country}}" *ngIf="openPosition.country === 'NETHERLANDS'"  	class="flag-icon flag-icon-nl"></span>
 								<span title="{{openPosition.country}}" *ngIf="openPosition.country === 'BELGIUM'"		class="flag-icon flag-icon-be"></span>
 								<span title="{{openPosition.country}}" *ngIf="openPosition.country === 'UK'"			class="flag-icon flag-icon-gb"></span>
-								<span title="{{openPosition.country}}" *ngIf="openPosition.country === 'IRL'"			class="flag-icon flag-icon-ie"></span>
+								<span title="{{openPosition.country}}" *ngIf="openPosition.country === 'IRELAND'"			class="flag-icon flag-icon-ie"></span>
 								<span title="{{openPosition.country}}" *ngIf="openPosition.country === 'EU_REMOTE'"		class="flag-icon flag-icon-eu"></span>
 								<span title="{{openPosition.country}}" *ngIf="openPosition.country === 'WORLD_REMOTE'"	class="flag-icon flag-icon-xx"></span>
 							
@@ -121,11 +121,11 @@
 							<select formControlName="country">
 								<option></option>
 								<option value="BELGIUM">{{'arenella-recruiter-mp-add-belgium' | translate}}</option>
-								<option value="IRL">{{'arenella-recruiter-mp-add-ireland' | translate}}</option>
+								<option value="IRELAND">{{'arenella-recruiter-mp-add-ireland' | translate}}</option>
 								<option value="NETHERLANDS">{{'arenella-recruiter-mp-add-netherlands' | translate}}</option>
 								<option value="UK">{{'arenella-recruiter-mp-add-uk' | translate}}</option>
-								<option value="EUROPE">{{'arenella-recruiter-mp-add-eu' | translate}}</option>
-								<option value="WORLD">{{'arenella-recruiter-mp-add-world' | translate}}</option>
+								<option value="EU_REMOTE">{{'arenella-recruiter-mp-add-eu' | translate}}</option>
+								<option value="WORLD_REMOTE">{{'arenella-recruiter-mp-add-world' | translate}}</option>
 							</select>
 						</td>	
 					</tr>
@@ -211,11 +211,11 @@
 							<select formControlName="country">
 								<option></option>
 								<option value="BELGIUM">{{'arenella-recruiter-mp-update-belgium' | translate}}</option>
-								<option value="IRL">{{'arenella-recruiter-mp-update-ireland' | translate}}</option>
+								<option value="IRELAND">{{'arenella-recruiter-mp-update-ireland' | translate}}</option>
 								<option value="NETHERLANDS">{{'arenella-recruiter-mp-update-netherlands' | translate}}</option>
 								<option value="UK">{{'arenella-recruiter-mp-update-uk' | translate}}</option>
-								<option value="EUROPE">{{'arenella-recruiter-mp-update-eu' | translate}}</option>
-								<option value="WORLD">{{'arenella-recruiter-mp-update-world' | translate}}</option>
+								<option value="EU_REMOTE">{{'arenella-recruiter-mp-update-eu' | translate}}</option>
+								<option value="WORLD_REMOTE">{{'arenella-recruiter-mp-update-world' | translate}}</option>
 							</select>
 						</td>	
 					</tr>
