skill sort and small FR layout changes

--- a/recruit-gui/src/app/listing/listing.component.html
+++ b/recruit-gui/src/app/listing/listing.component.html
@@ -172,7 +172,7 @@
 		<div class="modal-body"  style="height:400px;">
 			<p>{{'arenella-listing-publicity-open-position' | translate}}: {{selectedListing.title}}</p>
 			<br>
-			<p>{{'arenella-listing-publicity-location' | translate}}: {{getCountryCode(selectedListing.country)}}</p>
+			<p>{{'arenella-listing-publicity-location' | translate}}: {{selectedListing.country}}</p>
 			<br>
 			<p>https://www.arenella-ict.com/listing/{{selectedListing.listingId}}</p>
 			<br>
