--- a/recruit-gui/src/app/recruiter-marketplace/recruiter-marketplace.component.css
+++ b/recruit-gui/src/app/recruiter-marketplace/recruiter-marketplace.component.css
@@ -308,3 +308,13 @@ td{
 	text-align:left;
 	padding-left:100px;
 }
+
+
+@media (max-width:700px)  {
+
+	.closing-date-marketplace{
+		display:none;
+		background:red;
+	}
+	
+}
